# DEVBITS

./: .templatesyncignore  README.md  pyproject.toml
.github/workflows/: code.yml  docs.yml  init_repo.sh  init_repo.yml  template-sync.yml
docs/source/: conf.py  demo.ipynb  index.rst  install.rst  logging_config.rst  qserver.rst  sessions.rst
docs/source/api/: configs.rst  devices.rst  index.rst  plans.rst  utils.rst
docs/source/guides/: dm.md  index.rst  template_sync.rst
qserver/: qs-config.yml  qs_host.sh
src/bits/: __init__.py
src/bits/callbacks/: nexus_data_file_writer.py  spec_data_file_writer.py
src/bits/core/: best_effort_init.py  catalog_init.py  run_engine_init.py
src/bits/demo_instrument/: __init__.py  startup.py
src/bits/demo_instrument/configs/: devices.yml  iconfig.yml
src/bits/demo_instrument/plans/: sim_plans.py
src/bits/tests/: conftest.py  test_device_factories.py  test_general.py  test_stored_dict.py
src/bits/utils/: config_loaders.py  controls_setup.py  create_new_instrument.py  helper_functions.py  logging_setup.py  make_devices_yaml.py  metadata.py  sim_creator.py  stored_dict.py
